--- a/Develop/FE_Main/saffytime/pubspec.yaml
+++ b/Develop/FE_Main/saffytime/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.3.0
   get: ^4.6.5
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
