--- a/Develop/FE_Main/saffytime/pubspec.yaml
+++ b/Develop/FE_Main/saffytime/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   get: ^4.6.5
   google_fonts: ^3.0.1
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
