--- a/Develop/BE_Main/src/main/resources/application.properties
+++ b/Develop/BE_Main/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #it will be set build date by gradle. if this value is @build.date@, front-end is development mode
 build.date=@build.date@
-server.port=8080
+server.port=5000
 server.address=localhost
 server.servlet.contextPath=/
 # Charset of HTTP requests and responses. Added to the "Content-Type" header if not set explicitly.
@@ -38,7 +38,7 @@ spring.data.web.pageable.one-indexed-parameters=true
 spring.datasource.url=jdbc:mysql://localhost:3306/ssafy_web_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.username=root
-spring.datasource.hikari.password=Withfavor98!
+spring.datasource.hikari.password=ssafy
 
 
 
