--- a/Develop/BE_Main/docker-compose.yml
+++ b/Develop/BE_Main/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     build: .
     depends_on:
       - database
-    enviroment:
+    environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/ssafy_web_db
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: ssafy
