Update docker network

--- a/Develop/BE_Main/docker-compose.yml
+++ b/Develop/BE_Main/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   database:
     image: mysql:8.0.30
     environment:
-      MYSQL_DATABASE: "ssafy_web_db"
-      MYSQL_ROOT_HOST: "%"
+      MYSQL_DATABASE: ssafy_web_db
+      MYSQL_ROOT_HOST: %
       MYSQL_ROOT_PASSWORD: ssafy
       TZ: Asia/Seoul
 
@@ -19,6 +19,9 @@ services:
       - "--character-set-server=utf8mb4"
       - "--collation-server=ut8mb4_unicode_ci"
 
+    networks:
+      - ssafytime_db
+
     restart: always
 
   application:
@@ -31,4 +34,10 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/ssafy_web_db
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: ssafy
+    networks:
+      - ssafytime_db
     restart: always
+
+networks:
+  ssafytime_db:
+    driver: bridge
