--- a/Develop/BE_Main/src/main/resources/application.properties
+++ b/Develop/BE_Main/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #it will be set build date by gradle. if this value is @build.date@, front-end is development mode
+#여기 수정하면 안되요 죽어요
 build.date=@build.date@
 server.port=9090
 server.address=0.0.0.0
@@ -35,6 +36,7 @@ logging.level.org.hibernate=info
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.data.web.pageable.one-indexed-parameters=true
+# 이부분도 수정하면 안되요 죽어요
 spring.datasource.url=jdbc:mysql://database:3306/ssafy_web_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.username=root
