--- a/Develop/BE_Main/src/main/resources/application.properties
+++ b/Develop/BE_Main/src/main/resources/application.properties
@@ -37,7 +37,7 @@ logging.level.org.hibernate=info
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.data.web.pageable.one-indexed-parameters=true
 # 이부분도 수정하면 안되요 죽어요
-spring.datasource.url=jdbc:mysql://database:3306/ssafy_web_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ssafy_web_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=ssafy
