--- a/Develop/BE_Main/build.gradle
+++ b/Develop/BE_Main/build.gradle
@@ -66,6 +66,11 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	testImplementation 'org.springframework.security:spring-security-test'
 
+
+	//SMTP
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+
 	//STOMP 웹소캣 서버 사이드 테스트를 위한 의존성 추가
 	implementation("org.springframework.boot:spring-boot-starter-mustache")
 	//STOMP 관련 프론트 라이브러리
