--- a/Develop/BE_Main/src/main/resources/application.properties
+++ b/Develop/BE_Main/src/main/resources/application.properties
@@ -22,8 +22,8 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql = true
@@ -31,7 +31,7 @@ spring.jpa.properties.hibernate.show_sql = true
 logging.level.org.hibernate=info
 
 
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
