FEAT 설ë¬UPDATE체질문 조회 수정/ FEAT FCM 설정

--- a/Develop/BE_Main/build.gradle
+++ b/Develop/BE_Main/build.gradle
@@ -99,6 +99,10 @@ dependencies {
 
 	implementation("com.auth0:java-jwt:3.10.3")
 
+	//Firebase
+	implementation 'com.google.firebase:firebase-admin:6.8.1'
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version:'4.2.2'
+
 }
 
 tasks.named('test') {
