--- a/Develop/FE_Main/saffytime/pubspec.yaml
+++ b/Develop/FE_Main/saffytime/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^3.0.1
   percent_indicator: ^4.2.2
   intl: ^0.18.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
