--- a/Develop/FE_Main/saffytime/pubspec.yaml
+++ b/Develop/FE_Main/saffytime/pubspec.yaml
@@ -51,7 +51,6 @@ dependencies:
   json_annotation: ^4.6.0
   json_serializable: ^6.3.1
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -74,11 +73,8 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - assets/image/no_profile_image.png
-
-  # To add assets to your application, add an assets section, like this:
-  assets:
-    - asset/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
