--- a/Develop/BE_Main/build.gradle
+++ b/Develop/BE_Main/build.gradle
@@ -42,6 +42,7 @@ repositories {
 	mavenCentral()
 }
 
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	annotationProcessor 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -102,6 +103,9 @@ dependencies {
 	//Firebase
 	implementation 'com.google.firebase:firebase-admin:6.8.1'
 	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version:'4.2.2'
+	implementation platform('com.google.firebase:firebase-bom:28.4.2')
+	implementation 'com.google.firebase:firebase-messaging:23.0.0'
+	implementation 'com.google.firebase:firebase-analytics:17.5.0'
 
 }
 
