--- a/Develop/BE_Main/build.gradle
+++ b/Develop/BE_Main/build.gradle
@@ -101,11 +101,10 @@ dependencies {
 	implementation("com.auth0:java-jwt:3.10.3")
 
 	//Firebase
-	implementation 'com.google.firebase:firebase-admin:6.8.1'
+	implementation("com.google.firebase:firebase-admin:6.8.1")
 	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version:'4.2.2'
-	implementation platform('com.google.firebase:firebase-bom:28.4.2')
-	implementation 'com.google.firebase:firebase-messaging:23.0.0'
-	implementation 'com.google.firebase:firebase-analytics:17.5.0'
+	implementation("com.google.firebase:firebase-messaging:23.0.0")
+	implementation("com.google.firebase:firebase-analytics:17.5.0")
 
 }
 
