--- a/Develop/BE_Main/build.gradle
+++ b/Develop/BE_Main/build.gradle
@@ -104,8 +104,10 @@ dependencies {
 	implementation("com.google.firebase:firebase-admin:6.8.1")
 	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version:'4.2.2'
 
-}
+	//JSON
+	implementation 'com.google.code.gson:gson:2.8.5'
 
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
