--- a/Develop/FE_Main/ssafytime/pubspec.yaml
+++ b/Develop/FE_Main/ssafytime/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_time_picker_spinner: ^2.0.0
   firebase_messaging: ^14.2.1
   flutter_local_notifications: ^13.0.0
+  flutter_native_splash: ^2.2.17
 
   # Custom flutter_survey (https://github.com/Michelphoenix98/flutter_survey)
   diffutil_sliverlist: ^0.5.1
