--- a/Develop/BE_Main/src/main/resources/application.properties
+++ b/Develop/BE_Main/src/main/resources/application.properties
@@ -48,7 +48,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=ssafy
 
-
+#FCM
+firebase-create-scoped = "https://www.googleapis.com/auth/firebase.messaging"
+firebase-multicast-message-size = 500
 
 
 # jwt
