--- a/Develop/BE_Main/build.gradle
+++ b/Develop/BE_Main/build.gradle
@@ -101,8 +101,9 @@ dependencies {
 	implementation("com.auth0:java-jwt:3.10.3")
 
 	//Firebase
-	implementation("com.google.firebase:firebase-admin:6.8.1")
 	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version:'4.2.2'
+	implementation 'com.google.firebase:firebase-admin:9.1.1'
+
 }
 
 tasks.named('test') {
