--- a/Develop/BE_Main/build.gradle
+++ b/Develop/BE_Main/build.gradle
@@ -107,8 +107,9 @@ dependencies {
 	//JSON
 	implementation 'com.google.code.gson:gson:2.8.5'
 
-	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.6'
-	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.6'
+//	주석 제거시 오류 터짐
+//	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.6'
+//	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.6'
 
 }
 tasks.named('test') {
