--- a/Develop/BE_Main/src/main/resources/application.properties
+++ b/Develop/BE_Main/src/main/resources/application.properties
@@ -29,6 +29,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.format_sql = true
 #spring.jpa.properties.hibernate.show_sql = true
 logging.level.org.hibernate=info
+spring.db1.datasource.maxLifetime=30000
 
 
 #spring.sql.init.mode=always
