--- a/Develop/FE_Main/ssafytime/pubspec.yaml
+++ b/Develop/FE_Main/ssafytime/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,7 +45,7 @@ dependencies:
   flutter_secure_storage: ^7.0.1
   http: ^0.13.5
   shared_preferences: ^2.0.17
-  intl: ^0.18.0
+  intl: ^0.17.0
   ntp: ^2.0.0
   expandable: ^5.0.1
   flutter_time_picker_spinner: ^2.0.0
