--- a/Develop/FE_Main/ssafytime/pubspec.yaml
+++ b/Develop/FE_Main/ssafytime/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   equatable: ^2.0.5
   json_annotation: ^4.6.0
   json_serializable: ^6.3.1
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -82,7 +83,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - image/
+    - assets/image/no_menu.png
+    - assets/image/no_week_menu.png
     - assets/image/no_profile_image.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
