--- a/Develop/FE_Main/ssafytime/pubspec.yaml
+++ b/Develop/FE_Main/ssafytime/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   json_serializable: ^6.3.1
   flutter_spinkit: ^5.1.0
 
+  # flutter_launcher_icons: ^0.11.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
