update : change properties mail account info

--- a/Develop/BE_Main/src/main/resources/application.properties
+++ b/Develop/BE_Main/src/main/resources/application.properties
@@ -40,9 +40,9 @@ spring.data.web.pageable.one-indexed-parameters=true
 # 이부분도 수정하면 안되요 죽어요
 
 # in ec2 
-spring.datasource.url=jdbc:mysql://database:3306/ssafy_web_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+#spring.datasource.url=jdbc:mysql://database:3306/ssafy_web_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 # local -> ec2 database
-#spring.datasource.url=jdbc:mysql://i8a602.p.ssafy.io:3306/ssafy_web_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://i8a602.p.ssafy.io:3306/ssafy_web_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 # local
 #spring.datasource.url=jdbc:mysql://localhost:3306/ssafy_web_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -76,8 +76,11 @@ OPENVIDU_SESSIONS_GARBAGE_INTERVAL = 0
 # Mail info for temporary password
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username = kty226@gmail.com
-spring.mail.password = bhkarvynzoijgiwn
+
+
+#spring.mail.username = ??? ??
+#spring.mail.password = ????
+
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 
