--- a/Develop/FE_Main/ssafytime/pubspec.yaml
+++ b/Develop/FE_Main/ssafytime/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get: ^4.6.5
   google_fonts: ^3.0.1
   percent_indicator: ^4.2.2
+  # flutter_carousel_widget: ^2.0.2
   carousel_slider: ^4.2.1
   flutter_secure_storage: ^7.0.1
   http: ^0.13.5
