--- a/Develop/FE_Main/ssafytime/pubspec.yaml
+++ b/Develop/FE_Main/ssafytime/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   flutter_native_splash: ^2.2.17
   flutter_animation_progress_bar: ^2.3.1
+  fluttertoast: 8.0.5
+  double_back_to_close_app: ^2.1.0
+
   flutter_webrtc: ^0.9.21
   html: ^0.15.1
 
