--- a/Develop/BE_Main/Dockerfile
+++ b/Develop/BE_Main/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:11
 ARG JAR_FILE="build/libs/ssafytime-*-SNAPSHOT.jar"
 COPY ${JAR_FILE} build.jar
-ENTRYPOINT ["java","-jar","-Duser.timezone=Asia/Seoul","build.jar"]
+ENTRYPOINT ["java","-jar","build.jar"]
+# ENTRYPOINT ["java","-jar","-Duser.timezone=Asia/Seoul","build.jar"]
