--- a/Develop/BE_Main/Dockerfile
+++ b/Develop/BE_Main/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:11
 ARG JAR_FILE="build/libs/ssafytime-*-SNAPSHOT.jar"
 COPY ${JAR_FILE} build.jar
-ENTRYPOINT ["java","-jar","-Duser.timezone=Etc/GMT+1","build.jar"]
+ENTRYPOINT ["java","-jar","-Duser.timezone=IST","build.jar"]
 # ENTRYPOINT ["java","-jar","-Duser.timezone=Asia/Seoul","build.jar"]
